# openjtalk-native

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  release.yml
cmake/: HTSEngine_CMakeLists.txt  OpenJTalk_CMakeLists.txt
cmake/patches/: openjtalk_binary_function.patch
docker/: Dockerfile.android  Dockerfile.windows-cross
include/: openjtalk_native.h
scripts/: build_dependencies.sh  build_dependencies_android.sh  build_dependencies_ci.sh  build_dependencies_cross.sh  build_dependencies_ios.sh  fetch_dependencies.ps1  fetch_dependencies.sh
src/: openjtalk_native.c
test/: CMakeLists.txt  test_api.c  test_phonemization.c
